main meme card mostly done - small alignment bug

--- a/laughfactory/static/css/style.css
+++ b/laughfactory/static/css/style.css
@@ -131,6 +131,7 @@ img {
   font-weight: bold;
   text-align: left;
   color: black;
+  margin-right: 0.5em;
 }
 
 .comments {
@@ -159,19 +160,15 @@ img {
   display: flex;
   flex-direction: row;
   align-items: center;
+  align-content: center;
   justify-content: flex-start;
   width: 90%;
   margin-top: 1em;
 }
 
-#caption-user {
-  font-weight: 500;
-}
-
 .caption {
   font-family: sans-serif;
-  font-size: 20px;
-  font-weight: 250;
+  font-size: 15px;
   text-align: left;
   color: black;
   margin-left: 0.5em;
@@ -182,6 +179,7 @@ img {
   height: 2em;
   background-color: #FFCE5C;
   border-color: #FFCE5C;
+  margin-left: 0.5em;
 }
 .dropdown-toggle:hover {
   background-color: #FFCE5C;
@@ -198,6 +196,64 @@ img {
 .dropdown-toggle:focus {
   background-color: #FFCE5C;
   border-color: #FFCE5C;
+}
+
+.comments-container {
+  width: 100%;
+}
+
+#view-comments {
+  color: black;
+  font-size: 15px;
+}
+
+.view-comments {
+  width: 90%;
+  display: flex;
+  justify-content: center;
+}
+
+.comments-expanded {
+  width: 85%;
+}
+
+#no-comments {
+  font-weight: bold;
+}
+
+.createpost {
+  background-color: beige;
+}
+
+.timestamp-container {
+  width: 90%;
+  display: flex;
+  justify-content: flex-start;
+}
+
+#timestamp {
+  text-align: left;
+}
+
+.comment-button {
+  width: 7em;
+  height: 3em;
+  margin-left: 1em;
+}
+
+.comment-form {
+  display: flex;
+  flex-direction: row;
+  width: 90%;
+  align-content: center;
+  align-items: center;
+}
+
+.comment-align {
+  display: flex;
+  flex-direction: row;
+  align-content: center;
+  align-items: center;
 }
 
 .card {
